fix(css): Temporary fix for `result_name` overflow
- 차후 '검색결과' 텍스트를 별도 div로 분리해서 overflow 처리해야 함

--- a/src/components/map/ListCard.module.css
+++ b/src/components/map/ListCard.module.css
@@ -86,7 +86,11 @@
     text-align: left;
     font-size: x-large;
     font-weight: bold;
-    padding-left: 5%;
+    padding-left: 19px;
+    max-width: 315px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .result_tag {
